# restapi

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.tests.txt  requirements.txt  setup.cfg  setup.py
api/: __init__.py  citizen_schema.py  config.py  controllers.py  db.py  functions.py  mongo_orm.py  orm.py  schema.py  schemas.py  validation.py
api/schemas/: crt_ctzn.json  fields.json  imp.json  upd_ctzn.json
scripts/: delete.sh  delete_all.sh  install.sh  restapi.service  update.sh
tests/: __init__.py  conftest.py  test_c1.py  test_c2.py  test_c3.py  test_c4.py  test_c5.py  test_db.py  test_imports.py  test_logging.py  test_main.py  test_relatives.py  test_responses.py  test_stress.py  test_validation.py
tests/logging_tests/: conftest.py  test_logging.py
tests/stress_tests/: conftest.py  test_stress.py
tests/test_stress/: conftest.py  test_stress.py
