[tool.poetry]
name = "restapi"
version = "1.1.0"
description = "Тестовое задание REST-сервис на Python"

license = "MIT"

authors = [
    "Егор Чистов <egorchistov@mail.ru>"
]

readme = 'README.md'

repository = "https://github.com/egorchistov/restapi"
homepage = "https://github.com/egorchistov/restapi"

keywords = ['test task']

[tool.poetry.dependencies]
python = "^3.8.5"
flask = "^1.1.2"
flask-cors = "^3.0.8"
gunicorn = "^20.0.4"
numpy = "^1.19.1"
marshmallow = "^3.7.1"
pymongo = "^3.11.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
mypy = "^0.782"
pytest = "^6.0.1"
coverage = "^5.2.1"
